--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         "ext-json": "*",
         "ext-curl": "*",
         "ext-mbstring": "*",
-        "guzzlehttp/guzzle": "7.4.5.0"
+        "guzzlehttp/guzzle": ">=7.4.5.0"
     },
     "require-dev": {
         "vimeo/psalm": "^4.10",
